@@ -25,13 +25,13 @@ ExternalScripts[jquery]=http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery
 
 # List of local JavaScript libraries, optionally start with "/" to signal that its in
 # root of design folder and not in /javascript sub folder
-LocaleScripts[yui3]=/lib/yui/3.0/build/yui/yui-min.js
-LocaleScripts[yui2]=/lib/yui/2.7.0/build/yuiloader/yuiloader-min.js
-LocaleScripts[jquery]=jquery-1.3.2.min.js
+LocalScripts[yui3]=/lib/yui/3.0/build/yui/yui-min.js
+LocalScripts[yui2]=/lib/yui/2.7.0/build/yuiloader/yuiloader-min.js
+LocalScripts[jquery]=jquery-1.3.2.min.js
 
 # Local base script path, needed for yui scripts (YUILoader)
-LocaleScriptBasePath[yui3]=lib/yui/3.0/build/
-LocaleScriptBasePath[yui2]=lib/yui/2.7.0/build/
+LocalScriptBasePath[yui3]=lib/yui/3.0/build/
+LocalScriptBasePath[yui2]=lib/yui/2.7.0/build/
 
 
 [ezjscServer]
